--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean_dist": "shx rm -rf ./dist",
-    "build": "npm run clean_dist && tsc -p ./tsconfig.json"
+    "build": "npm run clean_dist && tsc -p ./tsconfig.json",
+    "release": "npm run build && npm publish"
   },
   "repository": {
     "type": "git",
