--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "dingtalk-sdk-node",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "dingtalk sdk for node server",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean_dist": "shx rm -rf ./dist",
